--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,6 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>net.sourceforge.argparse4j</groupId>
-      <artifactId>argparse4j</artifactId>
-      <version>0.9.0</version>
-    </dependency>
-    <dependency>
       <groupId>hu.blackbelt.bundles.jcolor</groupId>
       <artifactId>com.diogonunes.jcolor</artifactId>
       <version>5.2.0_1</version>
@@ -28,6 +23,11 @@
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
       <version>5.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.5.0</version>
     </dependency>
   </dependencies>
 
